--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "firebase": "^10.13.1",
     "flowbite-react": "^0.10.1",
     "localforage": "^1.10.0",
