--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-loading-skeleton": "^3.4.0",
+    "react-photo-view": "^1.2.6",
     "react-router-dom": "^6.26.1",
     "sort-by": "^1.2.0"
   },
