--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-loading-skeleton": "^3.4.0",
     "react-photo-view": "^1.2.6",
     "react-router-dom": "^6.26.1",
+    "react-simple-typewriter": "^5.0.1",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
