--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.54.1",
+    "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.7",
     "firebase": "^10.13.1",
     "flowbite-react": "^0.10.1",
