--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@table-library/react-table-library": "^4.1.7",
     "@tanstack/react-query": "^5.54.1",
-    "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.7",
     "firebase": "^10.13.1",
     "flowbite-react": "^0.10.1",
+    "ka-table": "^11.1.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
@@ -25,6 +26,7 @@
     "react-photo-view": "^1.2.6",
     "react-router-dom": "^6.26.1",
     "react-simple-typewriter": "^5.0.1",
+    "react-table": "^7.8.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
